# CodeAlpha_URL_Shortener

./: .env.example  .fastapicloudignore  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/middleware/: logging.py
app/models/: url.py
app/routers/: redirect.py  url.py
app/schemas/: url.py
app/services/: url_service.py
app/utils/: shortcode.py
