[project]
name = "url-shortener"
version = "0.1.0"
description = "A simple URL shortener backend built with FastAPI and MongoDB"
requires-python = ">=3.12,<3.14"
dependencies = [
    "certifi>=2026.7.22",
    "fastapi[standard]>=0.115.0",
    "motor>=3.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
